# graphics

./: .gitignore  CMakeLists.txt
include/: camera.hpp  geometry.hpp  input.hpp  renderer.hpp  shader.hpp  triangle.hpp
include/geometry/: circle.hpp  cube.hpp  curve.hpp  geometry.hpp  line.hpp  triangle.hpp
include/glad/: glad.h
shaders/: line.fs  line.vs  triangle.vs
src/: camera.cpp  glad.c  input.cpp  main.cpp  renderer.cpp  shader.cpp  triangle.cpp
src/geometry/: circle.cpp  cube.cpp  curve.cpp  line.cpp  triangle.cpp
